--- a/SPA/index.html
+++ b/SPA/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Page Application</title>
+    <link rel="stylesheet" href="./assets/style/main.css">
 </head>
 <body>
-    
+    <div class="container">
+        <H1>Hello</H1>
+    </div>    
 
     <script src="./assets/js/script/main.js"></script>
 </body>
