--- a/SPA/index.html
+++ b/SPA/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Page Application</title>
+    <link rel="stylesheet" href="./assets/style/main.css">
 </head>
 <body>
-    
+  <div class="container">
+    <h1>Hello , world </h1>
+  </div>  
 
-    <script src="./assets/js/script/main.js"></script>
+<script src="./assets/js/script/main.js"></script>
 </body>
 </html>
