--- a/SPA/index.html
+++ b/SPA/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="container">
     <h1>Hello , world </h1>
+    <P>Git is very useFull and easy to use</P>
   </div>  
 
 <script src="./assets/js/script/main.js"></script>
